fixed spacing in trapdoor input

--- a/client/src/components/GameScreen/Screen.css
+++ b/client/src/components/GameScreen/Screen.css
@@ -86,7 +86,7 @@
   .passWord {
     position: absolute;
     top: 40%;
-    left: 42.5%;
+    left: 43%;
     width: 15%;
     height: 8%;
     background-color: #f5f5f5;
